# Robotics

./: .gitignore  CMakeLists.txt  README  README.md  Robot  Thresholds.conf  angled.txt  battery.cpp  cameratest.cpp  data.txt  displaytest.cpp  e  main.cpp  newdata.txt  newdata4.txt  odopos.txt  opt.txt  testClient.cpp  testServer.cpp  testfile90.txt
build_fedora/: Makefile
build_pi/: Makefile
libraries/: spi_com.h
libraries/current/: ina219.h  main.cpp
src/: Arena.hpp  Display.hpp  Lidar.hpp  Motors.hpp  eigentest.cpp  include.hpp  main.cpp  pch.h  screentest.cpp  screentest.hpp
src/Camera/: Camera.cpp  Camera.hpp
src/Lidar/: Cox.cpp  Lidar.cpp  Lidar.hpp
src/Motors/: Motors.cpp  Motors.hpp  Odometry.cpp
src/Robot/: Arena.cpp  Arena.hpp  Kalman.cpp  Robot.cpp  Robot.hpp  servo.cpp  servo.hpp
src/libraries/current/: Makefile  a.out
